--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
   <body>
 
     <!-- Modals; Edit with care -->
+    <!---->
     <div id="img1" style="display:none;">
       <p>img 1</p>
       <img src="images/large/001.jpg">
+    </div>
+
+  <div id="img2" style="display:none;">
+      <p>img 1</p>
+      <img src="images/large/002.jpg">
     </div>
 
     <!-- Page content -->
