--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <section class="gallery">
         <ul class="imageGallery">
           <li><a href="#img1" rel="modal:open"><img src="images/thumbnails/001.jpg"></a></li>
+          <li><a href="#img2" rel="modal:open"><img src="images/thumbnails/002.jpg"></a></li>
+          <li><a href="#img3" rel="modal:open"><img src="images/thumbnails/003.jpg"></a></li>
+          <li><a href="#img4" rel="modal:open"><img src="images/thumbnails/004.jpg"></a></li>
+          <li><a href="#img5" rel="modal:open"><img src="images/thumbnails/005.jpg"></a></li>
         </ul>
       </section>
 
